-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 19
-
Component/s: hotspot
-
b12
-
x86_64
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8361247 | 17-pool-oracle | Unassigned | P3 | Open | Unresolved |
The following test failed in the JDK19 CI:
compiler/codecache/CodeCacheFullCountTest.java
Here's a snippet from the log file:
----------System.out:(7/2278)----------
Command line: [/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-19+4-134/macosx-x64-debug.jdk/jdk-19/fastdebug/bin/java -cp /System/Volumes/Data/mesos/work_dir/slaves/c82600aa-2448-475c-8c08-6f02a5b3f3af-S1576/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f6e14629-997c-45a5-9d53-3dcd9a6dd92b/runs/509bbce6-5325-4d8d-aee2-c88cca151a31/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/classes/0/compiler/codecache/CodeCacheFullCountTest.d:/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-19+4-134/src.full/open/test/hotspot/jtreg/compiler/codecache:/System/Volumes/Data/mesos/work_dir/slaves/c82600aa-2448-475c-8c08-6f02a5b3f3af-S1576/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f6e14629-997c-45a5-9d53-3dcd9a6dd92b/runs/509bbce6-5325-4d8d-aee2-c88cca151a31/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/classes/0/test/lib:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/javatest.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/jtreg.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/junit.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/hamcrest.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/testng.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/jcommander.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/guice.jar -XX:ReservedCodeCacheSize=2496k -XX:-UseCodeCacheFlushing CodeCacheFullCountTest WasteCodeCache ]
[2022-01-05T23:38:13.088302Z] Gathering output for process 15346
[2022-01-05T23:38:28.543683Z] Waiting for completion for process 15346
[2022-01-05T23:38:28.543939Z] Waiting for completion finished for process 15346
Output and diagnostic info for process 15346 was saved into 'pid-15346-output.log'
[2022-01-05T23:38:28.580547Z] Waiting for completion for process 15346
[2022-01-05T23:38:28.581348Z] Waiting for completion finished for process 15346
----------System.err:(11/619)----------
java.lang.RuntimeException: the value of full_count is wrong.
at CodeCacheFullCountTest.runTest(CodeCacheFullCountTest.java:68)
at CodeCacheFullCountTest.main(CodeCacheFullCountTest.java:43)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:577)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
at java.base/java.lang.Thread.run(Thread.java:833)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: the value of full_count is wrong.
compiler/codecache/CodeCacheFullCountTest.java
Here's a snippet from the log file:
----------System.out:(7/2278)----------
Command line: [/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-19+4-134/macosx-x64-debug.jdk/jdk-19/fastdebug/bin/java -cp /System/Volumes/Data/mesos/work_dir/slaves/c82600aa-2448-475c-8c08-6f02a5b3f3af-S1576/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f6e14629-997c-45a5-9d53-3dcd9a6dd92b/runs/509bbce6-5325-4d8d-aee2-c88cca151a31/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/classes/0/compiler/codecache/CodeCacheFullCountTest.d:/System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-19+4-134/src.full/open/test/hotspot/jtreg/compiler/codecache:/System/Volumes/Data/mesos/work_dir/slaves/c82600aa-2448-475c-8c08-6f02a5b3f3af-S1576/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f6e14629-997c-45a5-9d53-3dcd9a6dd92b/runs/509bbce6-5325-4d8d-aee2-c88cca151a31/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs/classes/0/test/lib:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/javatest.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/jtreg.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/junit.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/hamcrest.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/testng.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/jcommander.jar:/System/Volumes/Data/mesos/work_dir/jib-master/install/jtreg/6.1/1/bundles/jtreg-6.1+1.zip/jtreg/lib/guice.jar -XX:ReservedCodeCacheSize=2496k -XX:-UseCodeCacheFlushing CodeCacheFullCountTest WasteCodeCache ]
[2022-01-05T23:38:13.088302Z] Gathering output for process 15346
[2022-01-05T23:38:28.543683Z] Waiting for completion for process 15346
[2022-01-05T23:38:28.543939Z] Waiting for completion finished for process 15346
Output and diagnostic info for process 15346 was saved into 'pid-15346-output.log'
[2022-01-05T23:38:28.580547Z] Waiting for completion for process 15346
[2022-01-05T23:38:28.581348Z] Waiting for completion finished for process 15346
----------System.err:(11/619)----------
java.lang.RuntimeException: the value of full_count is wrong.
at CodeCacheFullCountTest.runTest(CodeCacheFullCountTest.java:68)
at CodeCacheFullCountTest.main(CodeCacheFullCountTest.java:43)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:577)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
at java.base/java.lang.Thread.run(Thread.java:833)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: the value of full_count is wrong.
- backported by
-
JDK-8361247 compiler/codecache/CodeCacheFullCountTest.java fails with "RuntimeException: the value of full_count is wrong."
-
- Open
-
- relates to
-
JDK-8278149 compiler/codecache/CodeCacheFullCountTest.java failing in loom repo
-
- Resolved
-
-
JDK-8277042 add test for 8276036 to compiler/codecache
-
- Resolved
-