test/hotspot/jtreg/compiler/codecache/CodeCacheFullCountTest.java
@@ -64,7 +64,7 @@ public class CodeCacheFullCountTest {
         Matcher stdoutMatcher = pattern.matcher(stdout);
         if (stdoutMatcher.find()) {
             int fullCount = Integer.parseInt(stdoutMatcher.group(1));
-            if (fullCount != 1) {
+            if (fullCount == 0) {
                 throw new RuntimeException("the value of full_count is wrong.");
             }
         } else {
